checkout order summary

--- a/flipkart-typescrit-project/src/CommonUsedComponents/Product/PriceContainer/index.scss
+++ b/flipkart-typescrit-project/src/CommonUsedComponents/Product/PriceContainer/index.scss
@@ -9,4 +9,8 @@
 
 .special-price-container {
     @include displayFlexColumnProperty(start, start, 0.5rem);
-}   
+} 
+
+.formate-price{
+  letter-spacing: 0.6px;
+}
