--- a/flipkart-typescrit-project/src/ComponentsPages/CheckOutPage/Checkout/index.scss
+++ b/flipkart-typescrit-project/src/ComponentsPages/CheckOutPage/Checkout/index.scss
@@ -10,3 +10,8 @@
         @include displayFlexColumnProperty(start, start, 0.7rem);
     }
 }
+.right-checkout {
+    position: sticky;
+    top : 4rem;
+    height: fit-content;
+}
