--- a/flipkart-typescrit-project/src/ComponentsPages/HomePage/ProductCount/index.scss
+++ b/flipkart-typescrit-project/src/ComponentsPages/HomePage/ProductCount/index.scss
@@ -2,15 +2,18 @@
 @import "../../../SCSSFile/SCSSFunctions/index.scss";
 
 .number-container {
-  @include displayFlexProperty(center, flex-start, 0.2rem);
+  @include displayFlexProperty(center, flex-start, 0.3rem);
   width: 55%;
 }
 
 .symbol {
-  border: none;
+  border: 0.5px solid $borderLightGray;
+  border-radius: 0.9rem;
   background-color: transparent;
   padding: 0.1rem 0.5rem;
   font-size: 1.2rem;
+  width: 1.8rem;
+  height: 1.8rem;
 }
 
 .number {
