--- a/flipkart-typescrit-project/src/ComponentsPages/WishListPage/MyWishListProduct/index.scss
+++ b/flipkart-typescrit-project/src/ComponentsPages/WishListPage/MyWishListProduct/index.scss
@@ -1,6 +1,10 @@
 @import "../../../SCSSFile/ColorVariable/index.scss";
 @import "../../../SCSSFile/SCSSFunctions/index.scss";
 
+.allwishlist{
+   width: 100%;
+}
+
 .my-wishlist-product {
     width: 55rem;
     background-color: $whiteColor;
