--- a/flipkart-typescrit-project/src/ComponentsPages/HomePage/HomeHeader/index.scss
+++ b/flipkart-typescrit-project/src/ComponentsPages/HomePage/HomeHeader/index.scss
@@ -101,3 +101,21 @@
 .head-search-icons {
   @include heightWidthProperty(1.5rem, 1.5rem);
 }
+
+.cart-home-header {
+  position: relative;
+}
+
+.quantity-count {
+  @include heightWidthProperty(1.5rem, 1.5rem);
+  @include displayFlexProperty(center, center, none);
+  color: $whiteColor;
+  font-weight: 600;
+  font-size: 0.9rem;
+  position: absolute;
+  top: 0.3rem;
+  left: 1.6rem;
+  background-color: $redColor;
+  border-radius: 0.7rem;
+  padding: 0.4rem;
+}
